--- a/table-ehcache/pom.xml
+++ b/table-ehcache/pom.xml
@@ -25,6 +25,11 @@
       <artifactId>cache-api</artifactId>
       <version>1.0.0</version>
     </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.12</version>
+    </dependency>
 
   </dependencies>
 </project>
