--- a/table-ehcache/src/main/resources/log4j2.properties
+++ b/table-ehcache/src/main/resources/log4j2.properties
@@ -11,7 +11,7 @@ appender.file-appender.fileName=logs/test.log
 appender.file-appender.layout.type=PatternLayout
 appender.file-appender.layout.pattern=%d{HH:mm:ss.SSS} [%t] %level %c{1} - %msg%n
 
-rootLogger.level=debug
+rootLogger.level=info
 rootLogger.appenderRefs=console, file
 rootLogger.appenderRef.console.ref=console-appender
 rootLogger.appenderRef.file.ref=file-appender
